infra/k8s/ping-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ping-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: hfcdevops/ping
---
apiVersion: v1
kind: Service 
metadata:
  name: ping-svc
spec:
  selector:
    app: ping 
  ports:
    - name: ping 
      protocol: TCP
      port: 3000
      targetPort: 3000
