infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: mywebsite.local
    http:
      paths:
      - pathType: Prefix
        path: /api/ping/?(.*)
        backend:
          service:
            name: ping-svc
            port: 
              number: 3000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
